--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-bootstrap-icons": "^1.11.3",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.24.1",
     "@vitejs/plugin-react": "^4.2.0",
-    "vite": "^5.0.0",
+    "vite": ">=5.4.12",
     "vite-plugin-pwa": "^0.20.1"
   }
 }
