--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.9.1",
+    "react": "^19.1.0",
+    "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.11.3",
-    "react-dom": "^18.2.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.24.4",
-    "@babel/preset-react": "^7.24.1",
-    "@vitejs/plugin-react": "^4.2.0",
-    "vite": ">=5.4.12",
+    "@babel/preset-env": "^7.26.3",
+    "@babel/preset-react": "^7.26.3",
+    "@vitejs/plugin-react": "^4.4.0",
+    "vite": "^6.3.0",
     "vite-plugin-pwa": "^0.20.1"
   }
 }
