--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "vite",
+    "prebuild": "npm test",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest --testPathPattern=unit",
+    "test:integration": "jest --testPathPattern=integration"
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -19,6 +24,11 @@
     "@babel/preset-react": "^7.26.3",
     "@vitejs/plugin-react": "^4.4.0",
     "vite": "^6.3.2",
-    "vite-plugin-pwa": "^0.21.2"
+    "vite-plugin-pwa": "^0.21.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.1.0",
+    "@testing-library/user-event": "^14.4.3"
   }
 }
