Fix invalid wildcard pattern in vercel.json headers

--- a/vercel.json
+++ b/vercel.json
@@ -53,7 +53,7 @@
       ]
     },
     {
-      "source": "/*.mp3",
+      "source": "/(.*)\\.mp3",
       "headers": [
         {
           "key": "Cache-Control",
